Changes with Apache 1.3.18

  *) TPF startup/shutdown fixes. [David McCreedy <McCreedy@us.ibm.com>]

  *) Correct a typo in httpd.conf.
     [Kunihiro Tanaka <tanaka@apache.or.jp>] PR#7154 

  *) Get the correct IP address if ServerName isn't set and we can't
     find a fully-qualified domain name at startup.
     [Danek Duvall <dduvall@eng.sun.com>] PR#7170

  *) Fix pointer arithmetic in mod_rewrite map expansion.
     [Christopher A. Bongaarts <cab@tc.umn.edu>] PR#7157, 7158

  *) Fixed a problem with file extensions being truncated during
     the call to ap_os_canonical_filename().
     [Brad Nicholes <BNICHOLES@novell.com>]

Changes with Apache 1.3.17

  *) Normalize the Netware path names to close a potential security
     hole in comparing paths when the adminstrator specifies both
     sys:foo and sys:/foo formats in the same httpd.conf file.
     [Brad Nicholes]

  *) Fix an unlikely segfault provided a zero length string in the
     translate_userdir() call on win32/os2, and accept backslashes
     in the UserDir directive on those platforms [William Rowe]

  *) Fixed translate_userdir() in MOD_USERDIR.C so that it correctly
     recognizes NetWare absolute paths.  This fixes the problem where
     MOD_USERDIR was trying to redirect to an absolute NetWare path
     rather than opening the file at the specified location.  This 
     patch fixes PR5826 & 6283. [Brad Nicholes <BNICHOLES@novell.com>]

  *) Fixed ap_os_is_path_absolute() in OS.H so that it can tell the
     between a NetWare path (SYS:/path) and a URL (HTTP://path).
     [Brad Nicholes <BNICHOLES@novell.com>]

  *) Fixed the sdbm.h bundled in Apache for Win32, bringing it in sync
     with Perl.  Because it didn't have the same geometry as Perl, 
     users reported the first user added with dbmmanage was not 
     recognized.  [William Rowe]

  *) Fixed ap_os_canonical_filename to append a the default volume 
     name if the the path is a full path and does not include the