@@ -1,5 +1,10 @@
 Changes with Apache 1.3.18
 
+  *) NetWare MOD_TLS fixes to disable nagles properly when making an SSL
+     connection, and properly detect an SSL connection based on the port
+     and work around the r->server->port 80 bug.  
+     [Brad Nicholes <BNICHOLES@novell.com>]
+
   *) TPF startup/shutdown fixes. [David McCreedy <McCreedy@us.ibm.com>]
 
   *) Correct a typo in httpd.conf.
